--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -3,8 +3,9 @@ spring:
   application:
     name: user-accounts
   profiles:
-    active: dev
-  cloud:
+    active:
+      - dev
+  cloud:  
     config:
       uri: http://localhost:8888
       username: admin
